# malgos

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: cmake-multi-platform.yml
docs/: index.md
include/ds/: hashmap.h
include/malgos/: hash.h  hashmap.h  piecetable.hpp  utils.h
include/malgos/common/: hash.h  types.h  utils.h
include/malgos/intrusive/: dlist.h  hashtable.h
src/: CMakeLists.txt  hashmap.c  piece.cpp  piecetable.cpp
src/common/: hash.c
src/intrusive/: dlist.c  hashtable.c
tests/: CMakeLists.txt  test_hashmap.cpp  test_intrusive_dlist.c  test_intrusive_hashtable.c
